--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 
 # testing
 /coverage
+.coverage
 
 # next.js
 /.next/
@@ -45,3 +46,6 @@ next-env.d.ts
 
 # Jetbrains
 .idea/
+
+# eslint
+.eslintcache
